--- a/Trip/SupportingFiles/Base.lproj/Main.storyboard
+++ b/Trip/SupportingFiles/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zyB-5Y-EKt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zyB-5Y-EKt">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -393,7 +393,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="428"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trip" translatesAutoresizingMaskIntoConstraints="NO" id="7Ym-TR-OZR">
-                                        <rect key="frame" x="144" y="151" width="126" height="126"/>
+                                        <rect key="frame" x="81" y="88" width="252" height="252"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6hf-VI-cnG">
                                         <rect key="frame" x="20" y="40" width="20" height="20"/>
@@ -465,7 +465,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="183"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trip" translatesAutoresizingMaskIntoConstraints="NO" id="PTr-GI-0sO">
-                                                        <rect key="frame" x="144" y="28.5" width="126" height="126"/>
+                                                        <rect key="frame" x="81" y="-34.5" width="252" height="252"/>
                                                     </imageView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9mI-FZ-ThS">
                                                         <rect key="frame" x="20" y="20" width="25" height="25"/>
@@ -3373,11 +3373,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="-65" translatesAutoresizingMaskIntoConstraints="NO" id="qPq-IR-vOu">
-                                <rect key="frame" x="20" y="80" width="275" height="20"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qPq-IR-vOu">
+                                <rect key="frame" x="20" y="80" width="147.5" height="20"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="uDh-4v-0f8">
-                                        <rect key="frame" x="0.0" y="0.0" width="170" height="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="59.5" height="20"/>
                                         <subviews>
                                             <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cxa-Gf-Fts" customClass="BEMCheckBox">
                                                 <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -3404,8 +3404,8 @@
                                                     <action selector="chooseUserType:" destination="bgj-Tj-Qga" eventType="valueChanged" id="TP3-Nj-TcZ"/>
                                                 </connections>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2YT-cs-Ryf">
-                                                <rect key="frame" x="25" y="0.0" width="145" height="20"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="بحث" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2YT-cs-Ryf">
+                                                <rect key="frame" x="25" y="0.0" width="34.5" height="20"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -3413,7 +3413,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="NDv-5p-ZnG">
-                                        <rect key="frame" x="105" y="0.0" width="170" height="20"/>
+                                        <rect key="frame" x="69.5" y="0.0" width="78" height="20"/>
                                         <subviews>
                                             <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pvq-vf-sZ5" customClass="BEMCheckBox">
                                                 <rect key="frame" x="0.0" y="0.0" width="25" height="20"/>
@@ -3441,8 +3441,8 @@
                                                     <action selector="chooseUserType:" destination="bgj-Tj-Qga" eventType="valueChanged" id="bNu-Ef-bQL"/>
                                                 </connections>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Advanced Search" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RBa-Mc-aTk">
-                                                <rect key="frame" x="30" y="0.0" width="140" height="20"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="الاهلي " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RBa-Mc-aTk">
+                                                <rect key="frame" x="30" y="0.0" width="48" height="20"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -3470,8 +3470,10 @@
                     <tabBarItem key="tabBarItem" title="Search" image="searchWhite" id="rSd-MF-9kl"/>
                     <connections>
                         <outlet property="advanSearchChk" destination="pvq-vf-sZ5" id="ULv-Gu-uLm"/>
+                        <outlet property="advancedSearchLbl" destination="RBa-Mc-aTk" id="wSd-Um-Mu8"/>
                         <outlet property="bigView" destination="rmu-4O-QSp" id="2A0-Yb-kyt"/>
                         <outlet property="searchChk" destination="cxa-Gf-Fts" id="FZe-th-AuU"/>
+                        <outlet property="searchLbl" destination="2YT-cs-Ryf" id="ha4-cj-K90"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gh7-ZR-AEG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
